[package]
name = "contracts-stylus"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
stylus-sdk = "0.10"
alloy-primitives = "1.3"
alloy-sol-types = "1.3"
hex = "0.4"

[dev-dependencies]
stylus-sdk = { version = "0.10", features = ["stylus-test"] }

[features]
export-abi = ["stylus-sdk/export-abi"]
contract-client-gen = []
